--- a/src/main/java/interfaz/Register.form
+++ b/src/main/java/interfaz/Register.form
@@ -237,7 +237,7 @@
               </Group>
               <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
               <Component id="dniCifUsuario" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="10" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -335,6 +335,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="cpUsuario">
       <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cpUsuarioActionPerformed"/>
         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="cpUsuarioKeyTyped"/>
       </Events>
     </Component>
